# scalan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: cpp-ci.yml
cmake/: CppScalaNativeOptions.cmake
cpp-driver/: CMakeLists.txt
cpp-driver/src/: main.cpp
cpp-examples/: AbstractDependentReferences.scala  AbstractTrait.scala  AbstractTraitConstructorVal.scala  AbstractTraitVal.scala  AbstractTypeMembers.scala  AbstractTypeSignatures.scala  AnyArrays.scala  AnyConstructorParameters.scala  AnyEquals.scala  AnyFields.scala  AnyParameters.scala  AnyString.scala  AnyToString.scala  AnyUnitSymbol.scala  ArrayLiterals.scala  ArrayParameters.scala  BasicMatch.scala  BasicNative.scala  BooleanArrays.scala  BoundedTypeMembers.scala  BoxedDependentInt.scala  BoxedDependentScalars.scala  ByteBufferState.scala  ByteShort.scala  CharArrays.scala  ClassArrays.scala  ClassFields.scala  ClassInstance.scala  ClassTraitDeclarations.scala  Comparisons.scala  Conditionals.scala  ConstructorBody.scala  ContextualAbstractions.scala  CustomToString.scala  DependentProjectionWidening.scala  DiamondLinearization.scala  DoubleArrays.scala  DynamicDispatch.scala  Equals.scala  Exceptions.scala  (+67 more)
cpp-frontend/: CMakeLists.txt
cpp-frontend/include/scalanative/frontend/: Ast.h  AstValidator.h  CompilerPipeline.h  Lexer.h  Parser.h  Typechecker.h
cpp-frontend/src/: Ast.cpp  AstValidator.cpp  CompilerPipeline.cpp  Lexer.cpp  Parser.cpp  Typechecker.cpp
cpp-nir/: CMakeLists.txt
cpp-nir/include/scalanative/nir/: Builder.h  Nir.h  Verifier.h
cpp-nir/src/: Builder.cpp  Nir.cpp  Verifier.cpp
cpp-nscplugin/: CMakeLists.txt
cpp-nscplugin/include/scalanative/nscplugin/: NirEmitter.h
cpp-nscplugin/src/: NirEmitter.cpp
cpp-runtime/: CMakeLists.txt
cpp-runtime/include/scalanative/runtime/: RuntimeConfig.h
cpp-runtime/src/: RuntimeConfig.cpp
cpp-support/: CMakeLists.txt
cpp-support/include/scalanative/support/: Arena.h  Diagnostics.h  Gc.h  Ids.h  SourceManager.h  SourceSpan.h  StdNames.h
cpp-support/src/: Arena.cpp  Diagnostics.cpp  SourceManager.cpp
cpp-tests/fixtures/: BasicReturnWithPrint.scala  Control.scala  Hello.scala  Semantics.scala  build-config.json
cpp-tests/smoke/: CMakeLists.txt
cpp-tests/smoke/src/: SmokeTests.cpp  SmokeTests2.cpp
cpp-tools/checker/: CMakeLists.txt
cpp-tools/checker/include/scalanative/tools/checker/: NirChecker.h
cpp-tools/checker/src/: NirChecker.cpp
cpp-tools/codegen/: CMakeLists.txt
cpp-tools/codegen/cmake/: RuntimeLlvmResources.h.in
cpp-tools/codegen/include/scalanative/tools/codegen/: LlvmCodegen.h
cpp-tools/codegen/resources/runtime/: exceptions.ll  lifecycle.ll
cpp-tools/codegen/src/: LlvmCodegen.cpp
cpp-tools/interflow/: CMakeLists.txt
cpp-tools/interflow/include/scalanative/tools/interflow/: InterflowOptimizer.h
cpp-tools/interflow/src/: InterflowOptimizer.cpp
cpp-tools/linker/: CMakeLists.txt
cpp-tools/linker/include/scalanative/tools/linker/: Linker.h
cpp-tools/linker/src/: Linker.cpp
docs/: compiler-implementation-plan.md  sn-lvm.md
